--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ kotlin-version = "2.1.10"
 kotlinx-datetime = "0.6.2"
 kotlinx-serialization = "1.8.1"
 ktor-version = "3.1.3"
+firebase-admin = "9.1.1"
 exposed-version = "1.0.0-beta-2"
 postgresql-version="42.7.2"
 logback-version = "1.4.14"
@@ -22,6 +23,7 @@ ktor-server-default-headers = { module = "io.ktor:ktor-server-default-headers", 
 ktor-server-requestValidation = { module = "io.ktor:ktor-server-request-validation", version.ref = "ktor-version" }
 ktor-server-statusPages = { module = "io.ktor:ktor-server-status-pages", version.ref = "ktor-version" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor-version" }
+firebase-admin = { module = "com.google.firebase:firebase-admin", version.ref = "firebase-admin" }
 exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed-version" }
 exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed-version" }
 exposed-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed-version" }
